--- a/app/views/seats/index.json.props
+++ b/app/views/seats/index.json.props
@@ -12,9 +12,16 @@ json.seat do
     json.sectionName seat.section.name
     json.rowNumber seat.row_number
     json.price number_to_currency(seat.section.price / 100.0)
+
     json.seatSelectionForm do
-      form_props(url: seat_selections_path(seat)) do |f|
-        f.submit "Select"
+      if Current.cart.include?(seat)
+        form_props(url: seat_selection_path(seat), method: :delete) do |f|
+          f.submit "Remove"
+        end
+      else
+        form_props(url: seat_selections_path(seat)) do |f|
+          f.submit "Select"
+        end
       end
     end
   else
