Add `<symbol>` for a selected seat
For comparison [see this commit]

Nothing exciting here. The ergonomics is similar to the Stimulus version.

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/de0bd4565563590a4e779569b7de30052f8bf910

--- a/app/views/seats/_sections.json.props
+++ b/app/views/seats/_sections.json.props
@@ -5,6 +5,12 @@ json.array! sections do |section|
       json.y seat.y
       json.venue_floor_seat_path venue_floor_seat_path(venue, floor, seat.row_number)
       json.aria_label seat.row_number
+
+      if Current.cart.include?(seat)
+        json.href "#seat-icon-selected"
+      else
+        json.href "#seat-icon-unselected"
+      end
     end
   end
 end
