--- a/app/views/seats/_sections.json.props
+++ b/app/views/seats/_sections.json.props
@@ -5,6 +5,12 @@ json.array! sections do |section|
       json.y seat.y
       json.venueFloorSeatPath venue_floor_seat_path(venue, floor, seat.row_number)
       json.ariaLabel seat.row_number
+
+      if Current.cart.include?(seat)
+        json.href "#seat-icon-selected"
+      else
+        json.href "#seat-icon-unselected"
+      end
     end
   end
 end
