Add panning and zooming to SVG map element
For comparison [see this commit][commit]

Nothing exciting here. The ergonomics is similar to the Stimulus version.

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/532d02c1e7c30c48c7e1deaa1f373cd5dda0ddb0

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.2.0",
     "sass": "^1.69.0",
     "react-inlinesvg": "^4.0.3",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "svg-pan-zoom": "^3.6.1"
   },
   "version": "0.1.0",
   "scripts": {
