Add map zoom controls to `seats/index`
For comparison [see this commit]

The Superglue version is lengthier than the commit above. Instead of just
introducing HTML changes, this commit also introduces a React component to
control zoom behavior and refactoring to introduce a `_seating_map.json.props`

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/fd394fc256780a9b81db73e6af1d5063629a235c

--- a/app/views/seats/show.json.props
+++ b/app/views/seats/show.json.props
@@ -1,6 +1,6 @@
 json.venue_name venue.name
 
-json.sections(partial: ["sections", locals: local_assigns]) do
+json.seating_map(partial: ['seating_map', locals: local_assigns]) do
 end
 
 json.floors(partial: ['floors', locals: local_assigns]) do
