Unselect a Seat to remove it from visitor's Cart
For comparison [see this commit][commit]

Nothing exciting here. The ergonomics is similar to the Stimulus version. We
continue to make use of `ButtonTo` and `form_props` to bring over the
conveniences of Rails to React.

[form_props]: https://github.com/thoughtbot/form_props
[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/3cd6b13369dcc83c73139e0f30c5b541da35678d

--- a/app/views/seats/_cart.json.props
+++ b/app/views/seats/_cart.json.props
@@ -2,4 +2,7 @@ json.array! Current.cart.seats do |seat|
   json.id seat.id
   json.row_number seat.row_number
   json.price number_to_currency(seat.section.price / 100.0)
+  json.removeSeatForm do
+    form_props(url: seat_selection_path(seat), method: :delete)
+  end
 end
