Enable server side rendering of HTML
Superglue does not support server side rendering of HTML out of the box. The
functionality is available using [Humid] and is [documented].

Turbolinks + Stimulus has the upper hand here. With Superglue and React, there
are some upfront costs to SSR:

1. Setup costs. SSR is run on the server side, and Browser APIs like the dom,
window, or DOMParser are not available. Any Polyfill or browser specific
behavior has to be moved to `componentDidMount`. This method never executes
when used with ReactDOMServer.

2. Thoughtfulness. APIs differ depending on the JS runtime. Most JS packages are
build with NodeJS, but its possible to use a different runtime that has a very
different API. In this commit we are using [mini_racer] which only has a Least Common
Denominator API across different JS runtimes. Care must be taken with package
selection to ensure that they can run where they are used.

Generally the strategy is to build for the `browser` and polyfill where possible.
In this commit, we need to shim a `TextEncoder` and polyfill `path` using
[esbuild-plugin-polyfill-node].

Long term costs:
3. It is another layer of tech that can go wrong and you have to debug.

4. Added latency. SSR with React is CPU bound, expect an additional 7ms added
on production with React's production build, and 30ms during development.

[mini_racer]: https://github.com/rubyjs/mini_racer
[esbuild-plugin-polyfill-node]: https://github.com/cyco130/esbuild-plugin-polyfill-node

--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@thoughtbot/superglue": "^0.50.0",
     "breakpoint-sass": "^3.0.0",
-    "esbuild": "^0.19.3",
     "dialog-polyfill": "^0.5.6",
+    "esbuild": "^0.19.3",
+    "esbuild-plugin-polyfill-node": "^0.3.0",
+    "esbuild-plugins-node-modules-polyfill": "^1.6.1",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.0",
     "react-inlinesvg": "^4.0.3",
     "react-redux": "^8.1.2",
-    "svg-pan-zoom": "^3.6.1"
+    "source-map-support": "^0.5.19",
+    "svg-pan-zoom": "^3.6.1",
+    "text-encoding": "^0.7.0"
   },
   "version": "0.1.0",
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --loader:.js=jsx --loader:.svg=dataurl --public-path=/assets",
+    "build": "yarn run build:web && yarn run build:ssr",
+    "build:web": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --loader:.js=jsx --loader:.svg=dataurl --public-path=/assets",
+    "build:ssr": "node ./build-ssr.mjs",
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
