Add `seats#show` route and action
For comparison [see this commit][commit]

This changes here has a lot in common with the referenced commit. The usual
routes, controllers, models, and tests remain unchanged. There are some
differences in the views worth mentioning.

1. `SeatDialog.js` vs. `_dialog.html.erb` - React components vs. partials +
Stimulus. They're both using the same dialogPolyfill, ergonomically they're not
too dissimilar. The stimulus version uses the DOM api, the React version uses
its lifecycle.

A quality of the Stimulus version is it immediately starts out as HTML, and
behavior is added as sprinkles of javascript.

A quality of the React version is its testability, and its tendency to encourage
grouping of behavior into reusable components.

Its important to note that in both version, there are no additional HTTP request
beyond the initial load.

2. There is no `show.js`
In Superglue applications, there is usually a `js` companion to the `props`
template, but in this case it was left out intentionally. Instead, we reuse
the `index.js` because the only difference between the `index` and the `show`
is the modal. Here's the relevant line:

```
def show
  venue = Venue.find_by!(slug: params[:venue_id])
  floor = venue.floors.find_by!(slug: params[:floor_id])
  sections = floor.sections.includes(:seats)
  seat = floor.seats.find_by_row_number!(params[:id])

-  render(locals: {
+  render(:index, locals: {
    venue: venue,
    floor: floor,
    sections: sections,
    seat: seat,
  })
end
```

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/438868d52abda9ef4d343a931878c0bef918a3d6

--- a/app/views/seats/index.json.props
+++ b/app/views/seats/index.json.props
@@ -1,12 +1,15 @@
 json.venueName venue.name
 
-json.sections do
-  json.array! sections do |section|
-    json.seats do
-      json.array! section.seats do |seat|
-        json.x seat.x
-        json.y seat.y
-      end
-    end
+json.sections(partial: ['sections', locals: local_assigns]) do
+end
+
+json.seat do
+  if local_assigns[:seat]
+    json.show true
+    json.sectionName seat.section.name
+    json.rowNumber seat.row_number
+    json.price number_to_currency(seat.section.price / 100.0)
+  else
+    json.show false
   end
 end
