--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@thoughtbot/superglue": "~1.0.0",
     "breakpoint-sass": "^3.0.0",
     "esbuild": "^0.19.3",
+    "dialog-polyfill": "^0.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
