--- a/app/views/seats/index.json.props
+++ b/app/views/seats/index.json.props
@@ -1,12 +1,8 @@
 json.venue_name venue.name
 
-json.sections do
-  json.array! sections do |section|
-    json.seats do
-      json.array! section.seats do |seat|
-        json.x seat.x
-        json.y seat.y
-      end
-    end
-  end
+json.sections(partial: ['sections', locals: local_assigns]) do
+end
+
+json.seat do
+  json.show false
 end
