--- a/app/views/seats/show.json.props
+++ b/app/views/seats/show.json.props
@@ -3,7 +3,10 @@ json.venue_name venue.name
 json.sections(partial: ["sections", locals: local_assigns]) do
 end
 
-json.cart(partial: ["cart", locals: local_assigns]) do
+json.floors(partial: ['floors', locals: local_assigns]) do
+end
+
+json.cart(partial: ['cart', locals: local_assigns]) do
 end
 
 json.seat do
