Filter Seats based on their Price
For comparison [see this commit][commit]

Nothing exciting here. The ergonomics is similar to the Stimulus version.

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/752ef6d402f687360b89c00048fa9b32ce558966

--- a/app/views/seats/_sections.json.props
+++ b/app/views/seats/_sections.json.props
@@ -1,4 +1,12 @@
 json.array! sections do |section|
+  if params.fetch(:maximum, Float::INFINITY).to_f >= section.price
+    json.opacity "1.0"
+    json.hidden false
+  else
+    json.opacity "0.3"
+    json.hidden true
+  end
+
   json.seats do
     json.array! section.seats do |seat|
       json.x seat.x
