--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@thoughtbot/superglue": "^0.41.0",
+    "breakpoint-sass": "^3.0.0",
     "esbuild": "^0.19.3",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "sass": "^1.69.0"
   },
   "version": "0.1.0",
-  "devDependencies": {
-  },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --loader:.js=jsx --public-path=/assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --loader:.js=jsx --public-path=/assets",
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
