Filter Seats based on their Price
For comparison [see this commit][commit]

Nothing exciting here. The ergonomics is similar to the Stimulus version.

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/752ef6d402f687360b89c00048fa9b32ce558966

--- a/app/views/seats/index.json.props
+++ b/app/views/seats/index.json.props
@@ -8,3 +8,6 @@ end
 
 json.cart(partial: ['cart', locals: local_assigns]) do
 end
+
+json.filters(partial: ['filters', locals: local_assigns]) do
+end
