Add a Seat Selection to Shopping Cart
For comparison [see this commit][commit]

Mostly similar to the above. A few things to call out is the introduction of a
`ButtonTo` component and the usage of `form_props`.

1. [form_props] is a forked of `form_with`, but made to output html props for
react components instead of HTML. It allows us to use Rails forms in React.

2. Rail has the equivalent `button_to` helper which builds a form that looks
like a link when the action is POST, PUT, DELETE. We can easily replicate this
with `form_props` and a custom component `ButtonTo`.

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/9ea344f47b6077c5e2a14dffae85b1ca2371e534
[form_props]: https://github.com/thoughtbot/form_props

--- a/app/views/seats/index.json.props
+++ b/app/views/seats/index.json.props
@@ -2,3 +2,6 @@ json.venueName venue.name
 
 json.sections(partial: ['sections', locals: local_assigns]) do
 end
+
+json.cart(partial: ['cart', locals: local_assigns]) do
+end
