--- a/app/views/seats/show.json.props
+++ b/app/views/seats/show.json.props
@@ -1,7 +1,15 @@
 render(template: "seats/index", locals: local_assigns)
 
+json.cart(partial: ['cart', locals: local_assigns]) do
+end
+
 json.seat do
   json.sectionName seat.section.name
   json.rowNumber seat.row_number
   json.price number_to_currency(seat.section.price / 100.0)
+  json.seatSelectionForm do
+    form_props(url: seat_selections_path(seat)) do |f|
+      f.submit
+    end
+  end
 end
