Fix path helper in seat dialog for remove button
Change seat_selections_path to seat_selection path to correctly match up with destroy route.

--- a/app/views/seats/show.json.props
+++ b/app/views/seats/show.json.props
@@ -7,7 +7,7 @@ json.seat do
 
   if Current.cart.include?(seat)
     json.seatSelectionForm do
-      form_props(url: seat_selections_path(seat), method: :delete) do |f|
+      form_props(url: seat_selection_path(seat), method: :delete) do |f|
         f.submit(text: "Remove")
       end
     end
