Add panning and zooming to SVG map element
For comparison [see this commit][commit]

Nothing exciting here. The ergonomics is similar to the Stimulus version.

[commit]: https://github.com/seanpdoyle/select-your-own-seat/commit/532d02c1e7c30c48c7e1deaa1f373cd5dda0ddb0

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^19.0.0",
     "react-inlinesvg": "^4.1.5",
     "react-redux": "^9.2.0",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "svg-pan-zoom": "^3.6.2"
   },
   "version": "0.1.0",
   "scripts": {
